--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@mdi/font": "7.4.47",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
+    "vue-confetti": "^2.3.0",
+    "vue3-signature": "^0.2.4",
+    "vuelidate": "^0.7.7",
     "vuetify": "^3.6.14"
   },
   "devDependencies": {
